<resources>
    <string name="app_name">MediCareAlert</string>
    <string name="add">Add</string>
    <string name="save_and_schedule">Save &amp; Schedule</string>
    <string name="add_medicine">Add medicine</string>
    <string name="add_record">Add record</string>
    <string name="more">More options</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="invite">Invite</string>
    <string name="settings">Settings</string>
    <string name="help_support">Help &amp; Support</string>
    <string name="health_trackers_measurements">Health Trackers &amp; Measurements</string>
    <string name="diary">Diary</string>

</resources>
